# python-rconfig

./: .gitignore  .travis.yml  LICENSE  README.rst  pyproject.toml  tox.ini
rconfig/: __init__.py  cli.py  utils.py
tests/: test_environment.py
